[metadata]
name = torutils-rommelrodperez
version = 0.0.1
author = Rommel Rodriguez Perez 
author_email = alrodperez@gmail.com
description = Easy Tor Proxying Library 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
# install_requires =
#     stem
#     requests

[options.packages.find]
where = src
